# distributed-calculator

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  services.rs
tests/: test.rs
