[package]
name = "distributed_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
rust_decimal = "*"
rust_decimal_macros = "1.36.0"

[workspace]
members = ["client", "server"]


[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"
